добавлено логирование